compiler/driver/tests/snapshots/diagnostics_snapshots__diag_struct_unknown_field.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E014]: unknown field `y` on `S`
  --> test.ny:3:28
   |
  3 | }
   |                            ^
   = help: check the field name against the struct or union definition
